# netdefs

./: Cargo.toml  README.md
macros/: Cargo.toml  lib.rs
src/: lib.rs
src/layer2/: ethernet.rs
src/layer3/: ipv4.rs  mod.rs
src/layer4/: icmp.rs  mod.rs
src/layer4/tcp/: mod.rs
src/macros/: mod.rs
src/utils/: data_format.rs  mod.rs
