[package]
name = "netdefs-macros"
version = "0.1.0"
authors = ["Some Dude <7zbayf+sw1l67jjhlbk@sharklasers.com>"]
description = "Procedural macros for netdefs"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
procedural-masquerade = { path = "../procedural-masquerade", version="0.1" }
phf_codegen="0.7"
quote = "0.3.14"
syn = { version = "0.11.8", features = ["full"] }
